[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Other/Player Bar AGOH.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerBar.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Other/Gun Select.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Other/HEALTH VALUE.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Other/HealthBar Effect.png" type="Texture" id=5]
[ext_resource path="res://Pixeled.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/Other/ShieldHealth.png" type="Texture" id=7]
[ext_resource path="res://Scene/PlayerBar2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Audio/SFX/Heartbeat.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle Playerbar"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerBar:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "IdleShield"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerBar:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 6 )

[node name="PlaterBar" type="Node2D" groups=[
"Saved",
]]
script = ExtResource( 2 )

[node name="HealthEffect" type="Sprite" parent="."]
position = Vector2( -26.9895, -10.9998 )
texture = ExtResource( 5 )

[node name="Health" type="Sprite" parent="."]
position = Vector2( -26.9895, -10.9998 )
texture = ExtResource( 4 )
hframes = 2
vframes = 50
frame = 99

[node name="ShieldHealth" type="Sprite" parent="."]
position = Vector2( 52.9941, -10.991 )
texture = ExtResource( 7 )
hframes = 2
vframes = 25

[node name="PlayerBar" type="Sprite" parent="."]
position = Vector2( 0, 23 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Idle Playerbar" = SubResource( 1 )
anims/IdleShield = SubResource( 2 )

[node name="WeaponSelect" type="Sprite" parent="."]
position = Vector2( -17.7678, 8 )
texture = ExtResource( 3 )
vframes = 7

[node name="Ammo" type="Label" parent="."]
modulate = Color( 1, 0.898039, 0.588235, 1 )
margin_left = 47.0
margin_top = -7.0
margin_right = 69.0
margin_bottom = 21.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 3 )
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxAmmo" type="Label" parent="."]
modulate = Color( 1, 0.898039, 0.588235, 1 )
margin_left = 67.75
margin_top = 11.0
margin_right = 87.75
margin_bottom = 39.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 4 )
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShellIcon" type="Label" parent="."]
modulate = Color( 1, 0.898039, 0.588235, 1 )
margin_left = -62.75
margin_top = 20.9716
margin_right = -22.75
margin_bottom = 48.9716
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoIcon" type="Label" parent="."]
modulate = Color( 1, 0.898039, 0.588235, 1 )
margin_left = -62.75
margin_top = 33.2613
margin_right = -22.75
margin_bottom = 61.2613
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LongAmmoIcon" type="Label" parent="."]
modulate = Color( 1, 0.898039, 0.588235, 1 )
margin_left = -62.75
margin_top = 45.6818
margin_right = -22.75
margin_bottom = 73.6818
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBar2" parent="." instance=ExtResource( 8 )]
position = Vector2( 254.756, -23 )

[node name="HeartBeatsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
